<resources>
    <string name="app_name">Messaging Forwarder</string>
    <string name="pref_phoneNumber_description">The phone number to forward messages from</string>
    <string name="pref_phoneNumber">Phone number</string>
    <string name="pref_targetURL_description">The URL to forward messages to</string>
    <string name="pref_targetURL">Target URL</string>

    <string name="pref_refreshToken_description">The token that is used to get the access token</string>
    <string name="pref_refreshToken">Refresh Token</string>

    <string name="pref_servicePassword_description">The password used to get the refresh token</string>
    <string name="pref_servicePassword">Service Password</string>

    <string name="pref_serviceUsername_description">The user used to get the refresh token</string>
    <string name="pref_serviceUsername">Service User</string>

    <string name="pref_settings_title">Preferences</string>
    <string name="pref_about">About</string>
    <string name="about_title">License</string>
    <string name="about_message">
        <![CDATA[
        "THE BEER-WARE LICENSE" (Revision 42):\n
        <laudrup@stacktrace.dk> wrote this code.  As long as you retain this notice you
        can do whatever you want with this stuff. If we meet some day, and you think
        this stuff is worth it, you can buy me a beer in return.\n
        Kasper Laudrup\n\n

        Source code available at:\n
        https://github.com/laudrup/MessagingForwarder\n\n
        Icons made by Visual Pharm <https://icons8.com/> under "CC BY-ND 3.0" license.
        ]]>
    </string>
</resources>
